회원 관리 - 인가 설정 시시간 반응하기